--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
-/*your CSS goes here*/
+input {
+    background-color: yellow;
+}
+
+input[name="last-name"] {
+    font-weight: bold;
+}
+
+p {
+    border: 2px solid;
+    padding: 5px;
+}
